[package]
name = "facet-urlencoded"
version = "0.44.2"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-urlencoded"
description = "URL-encoded form data serialization and deserialization for Facet types"
keywords = ["urlencoded", "form", "serialization", "deserialization", "facet"]
categories = ["encoding", "parsing", "data-structures"]
homepage = "https://facet.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = []
axum = ["dep:axum-core", "dep:http", "dep:http-body-util"]

[dependencies]

# Axum integration (optional)
axum-core = { version = "0.5", default-features = false, optional = true }
facet-core = { path = "../facet-core", version = "0.44.2" }
facet-reflect = { path = "../facet-reflect", version = "0.44.2" }
form_urlencoded = "1.2.1"
http = { workspace = true, optional = true }
http-body-util = { version = "0.1", default-features = false, optional = true }
log = { workspace = true }

[dev-dependencies]
facet = { path = "../facet", features = ["all-impls", "doc"] }
facet-testhelpers = { path = "../facet-testhelpers" }

[lints]
workspace = true
